--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,8 +6,20 @@ body {
   color:#FFF;
   font-family: 'Ubuntu Mono', monospace !important;
 }
+#main {
+  z-index: 2;
+}
+.hero-body {
+  .title {
+    color:#FFF;
+  }
+  .subtitle {
+    color:#ccc;
+  }
+}
 .navbar {
   background-color:#171717;
+  z-index: 1000;
   a {
     color:#FFF;
   }
@@ -27,8 +39,18 @@ body {
     }
   }
 }
-
+.label {
+  color:#FFF;
+}
 .box {
   background-color:#171717;
   color:#FFF;
+}
+
+#particles-js {
+  position: absolute;
+  top:0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
 }
